8304825: MacOS metal pipeline - window isn't painted if created during display sleep

Use one display link thread per MTLContext. Adjust refresh rate with current display.