src/java.desktop/macosx/native/libawt_lwawt/java2d/metal/MTLContext.m
@@ -24,6 +24,7 @@
  */
 
 #include <stdlib.h>
+#import <ThreadUtilities.h>
 
 #include "sun_java2d_SunGraphics2D.h"
 
@@ -33,6 +34,7 @@
 #import "MTLSamplerManager.h"
 #import "MTLStencilManager.h"
 
+#define KEEP_ALIVE_COUNT 4
 
 extern jboolean MTLSD_InitMTLWindow(JNIEnv *env, MTLSDOps *mtlsdo);
 
@@ -106,6 +108,10 @@ MTLTransform* tempTransform = nil;
 
 @implementation MTLContext {
     MTLCommandBufferWrapper * _commandBufferWrapper;
+    CVDisplayLinkRef _displayLink;
+    NSMutableSet* _layers;
+    int _displayLinkCount;
+    NSLock* _dlLock;
 
     MTLComposite *     _composite;
     MTLPaint *         _paint;
@@ -121,17 +127,22 @@ MTLTransform* tempTransform = nil;
 
 @synthesize textureFunction,
             vertexCacheEnabled, aaEnabled, device, pipelineStateStorage,
-            commandQueue, blitCommandQueue, vertexBuffer,
+            commandQueue, vertexBuffer,
             texturePool, paint=_paint, encoderManager=_encoderManager,
             samplerManager=_samplerManager, stencilManager=_stencilManager;
 
 extern void initSamplers(id<MTLDevice> device);
 
-- (id)initWithDevice:(id<MTLDevice>)d shadersLib:(NSString*)shadersLib {
+- (id)initWithDevice:(jint)displayID shadersLib:(NSString*)shadersLib {
     self = [super init];
     if (self) {
         // Initialization code here.
-        device = d;
+        device = CGDirectDisplayCopyCurrentMetalDevice(displayID);
+        if (device == nil) {
+            J2dRlsTraceLn1(J2D_TRACE_ERROR, "MTLContext.initWithDevice(): Cannot create device from displayID=%d",
+                           displayID);
+            return nil;
+        }
 
         pipelineStateStorage = [[MTLPipelineStatesStorage alloc] initWithDevice:device shaderLibPath:shadersLib];
         if (pipelineStateStorage == nil) {
@@ -159,9 +170,13 @@ extern void initSamplers(id<MTLDevice> device);
 
         // Create command queue
         commandQueue = [device newCommandQueue];
-        blitCommandQueue = [device newCommandQueue];
 
         _tempTransform = [[MTLTransform alloc] init];
+        _layers = [[NSMutableArray alloc] init];
+        _displayLinkCount = 0;
+        _dlLock = [[NSLock alloc] init];
+        CVDisplayLinkCreateWithCGDisplay(displayID, &_displayLink);
+        CVDisplayLinkSetOutputCallback(_displayLink, &mtlDisplayLinkCallback, (__bridge void *) self);
     }
     return self;
 }
@@ -174,7 +189,6 @@ extern void initSamplers(id<MTLDevice> device);
     //self.texturePool = nil;
     self.vertexBuffer = nil;
     self.commandQueue = nil;
-    self.blitCommandQueue = nil;
     self.pipelineStateStorage = nil;
 
     if (_encoderManager != nil) {
@@ -216,6 +230,17 @@ extern void initSamplers(id<MTLDevice> device);
         [_clip release];
         _clip = nil;
     }
+
+    [_layers release];
+
+    if (CVDisplayLinkIsRunning(_displayLink)) {
+        CVDisplayLinkStop(_displayLink);
+        J2dTraceLn1(J2D_TRACE_VERBOSE, "MTLContext_CVDisplayLinkStop: ctx=%p", self);
+    }
+    CVDisplayLinkRelease(_displayLink);
+
+    [_dlLock unlock];
+    [_dlLock release];
 
     [super dealloc];
 }
@@ -470,13 +495,6 @@ extern void initSamplers(id<MTLDevice> device);
     return [self.commandQueue commandBuffer];
 }
 
-/*
- * This should be exclusively used only for final blit
- * and present of CAMetalDrawable in MTLLayer
- */
-- (id<MTLCommandBuffer>)createBlitCommandBuffer {
-    return [self.blitCommandQueue commandBuffer];
-}
 
 -(void)setBufImgOp:(NSObject*)bufImgOp {
     if (_bufImgOp != nil) {
@@ -487,6 +505,76 @@ extern void initSamplers(id<MTLDevice> device);
 
 -(NSObject*)getBufImgOp {
     return _bufImgOp;
+}
+
+- (void) redraw {
+    AWT_ASSERT_APPKIT_THREAD;
+    [_dlLock lock];
+    @try {
+        for (MTLLayer *layer in _layers) {
+            [layer setNeedsDisplay];
+        }
+        if (_displayLinkCount > 0) {
+            _displayLinkCount--;
+        } else {
+            if (_layers.count > 0) {
+                [_layers removeAllObjects];
+            }
+            if (CVDisplayLinkIsRunning(_displayLink)) {
+                CVDisplayLinkStop(_displayLink);
+                J2dTraceLn1(J2D_TRACE_VERBOSE, "MTLContext_CVDisplayLinkStop: ctx=%p", self);
+            }
+        }
+    } @finally {
+        [_dlLock unlock];
+    }
+}
+
+CVReturn mtlDisplayLinkCallback(CVDisplayLinkRef displayLink, const CVTimeStamp* now, const CVTimeStamp* outputTime, CVOptionFlags flagsIn, CVOptionFlags* flagsOut, void* displayLinkContext)
+{
+    J2dTraceLn1(J2D_TRACE_VERBOSE, "MTLContext_mtlDisplayLinkCallback: ctx=%p", displayLinkContext);
+    @autoreleasepool {
+        MTLContext *ctx = (__bridge MTLContext *)displayLinkContext;
+        [ctx performSelectorOnMainThread:@selector(redraw) withObject:nil waitUntilDone:NO];
+    }
+    return kCVReturnSuccess;
+}
+
+- (void)startRedraw:(MTLLayer*)layer {
+    [_dlLock lock];
+    layer.redrawCount++;
+    J2dTraceLn2(J2D_TRACE_VERBOSE, "MTLContext_startRedraw: ctx=%p layer=%p", self, layer);
+    @try {
+        _displayLinkCount = KEEP_ALIVE_COUNT;
+        [_layers addObject:layer];
+        if (_displayLink != NULL && !CVDisplayLinkIsRunning(_displayLink)) {
+            CVDisplayLinkStart(_displayLink);
+            J2dTraceLn1(J2D_TRACE_VERBOSE, "MTLContext_CVDisplayLinkStart: ctx=%p", self);
+        }
+    } @finally {
+        [_dlLock unlock];
+    }
+}
+
+- (void)stopRedraw:(MTLLayer*) layer {
+    J2dTraceLn2(J2D_TRACE_VERBOSE, "MTLContext_stopRedraw: ctx=%p layer=%p", self, layer);
+    [_dlLock lock];
+    @try {
+        if (_displayLink != nil) {
+            if (--layer.redrawCount <= 0) {
+                [_layers removeObject:layer];
+                layer.redrawCount = 0;
+            }
+            if (_layers.count == 0 && _displayLinkCount == 0) {
+                if (CVDisplayLinkIsRunning(_displayLink)) {
+                    CVDisplayLinkStop(_displayLink);
+                    J2dTraceLn1(J2D_TRACE_VERBOSE, "MTLContext_CVDisplayLinkStop: ctx=%p", self);
+                }
+            }
+        }
+    } @finally {
+        [_dlLock unlock];
+    }
 }
 
 @end
